Turned compiler args into xml properties for future compatability. Made command register log command id's and fixed some warnings